--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: rgb(3, 0, 41);
+  background-color: rgb(0, 0, 80); /*3,0,41 */
   margin: 0rem;
   overflow: hidden;
   color: #ffffff; /* make default text white */
