--- a/style.css
+++ b/style.css
@@ -7,6 +7,31 @@ body {
   color: #ffffff; /* make default text white */
 }
 
+a {
+  color: hotpink;
+  background-color: yellow;
+  font-weight: bold;
+}
+ /* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+} 
+
 /* Top and bottom orange bars */
 .page-bar-top,
 .page-bar-bottom {
