--- a/style.css
+++ b/style.css
@@ -8,23 +8,22 @@ body {
 }
 
 a {
-  color: hotpink;
-  background-color: yellow;
+  color: white;
   font-weight: bold;
 }
  /* unvisited link */
 a:link {
-  color: red;
+  color: white;
 }
 
 /* visited link */
 a:visited {
-  color: green;
+  color: orange;
 }
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: red;
 }
 
 /* selected link */
