--- a/style.css
+++ b/style.css
@@ -8,28 +8,9 @@ body {
 }
 
 a {
-  color: white;
+  color: #ffffff;
   font-weight: bold;
 }
- /* unvisited link */
-a:link {
-  color: white;
-}
-
-/* visited link */
-a:visited {
-  color: orange;
-}
-
-/* mouse over link */
-a:hover {
-  color: red;
-}
-
-/* selected link */
-a:active {
-  color: blue;
-} 
 
 /* Top and bottom orange bars */
 .page-bar-top,
